add de cor no body

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Adicione o link para o Owl Carousel JS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="tailwind.css">
+    <script src="tailwind.config.js"></script>
+
     <title>Meu Site</title>
 </head>
-<body class="bg-gray-100">
+<body  style="background-color: #fa912e;" >
 
     <!-- Navbar -->
-    <nav class="bg-blue-500 p-4">
+    <nav class="bg-seagull-400 p-4">
         <div class="container mx-auto flex justify-between items-center">
             <!-- Logo -->
             <div class="text-white font-bold text-lg">
@@ -52,12 +55,12 @@
             <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec augue nec leo hendrerit volutpat.</p>
         </div>
 
-        <!-- Parte 2: Vídeo responsivo com capa -->
+        Parte 2: Vídeo responsivo com capa
         <div class="lg:w-1/2 lg:h-50 relative">
             <div class="w-full h-full overflow-hidden">
                 <video class="w-full h-full object-cover" controls poster="IMG-01.png">
                     <!-- Adicione o caminho do vídeo local ou URL do vídeo aqui -->
-                    <source src="Trabalhadores da Última Hora - Montes Claros - MG.mp4" type="video/mp4">
+                    <source src="Trabalhadores da Última Hora - Montes Claros - MG.mp4" type="video/mp4" >
                     Seu navegador não suporta o elemento de vídeo.
                 </video>
             </div>
@@ -97,9 +100,9 @@
             <div><img src="https://picsum.photos/800/600/?image=3" alt="Imagem 3"></div>
         </div>
     </div>
-
+   
     <!-- Rodapé -->
-    <footer class="bg-gray-800 text-white p-4 mt-8">
+    <footer class="bg-seagull-400 text-white p-4 mt-8">
         <div class="container mx-auto text-center">
             <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
         </div>
