--- a/contato.html
+++ b/contato.html
@@ -1,73 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Meu Site</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="tailwind.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>Contato</title>
 </head>
-<body class="bg-gray-100">
+
+<body class="bg-gray-100 font-sans flex flex-col min-h-screen">
 
     <!-- Navbar -->
-    <nav class="bg-blue-500 p-4">
+    <nav class="bg-seagull-400 p-4">
         <div class="container mx-auto flex justify-between items-center">
             <div class="text-white font-bold text-lg">
-                <a href="index.html">Logo</a>
+                <a href="index.html">
+                    <img src="IMG-02.jpeg" alt="" class="w-auto h-20">
+                </a>
             </div>
             <div class="lg:hidden">
                 <button id="menu-toggle" class="text-white focus:outline-none">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                         xmlns="http://www.w3.org/2000/svg">
+                        xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="M4 6h16M4 12h16m-7 6h7"></path>
+                            d="M4 6h16M4 12h16m-7 6h7"></path>
                     </svg>
                 </button>
             </div>
             <div class="hidden lg:flex space-x-4">
-                <a href="index.html" class="text-white">Home</a>
-                <a href="sobre.html" class="text-white">Sobre</a>
-                <a href="contato.html" class="text-white">Contato</a>
+                <a href="index.html" class="text-white nav-link font-sans font-bold">Home</a>
+                <a href="sobre.html" class="text-white nav-link font-sans font-bold">Sobre</a>
+                <a href="contato.html" class="text-white nav-link font-sans font-bold">Contato</a>
             </div>
         </div>
     </nav>
 
     <!-- Conteúdo principal -->
-    <div class="container mx-auto mt-8">
-        <h1 class="text-4xl font-bold mb-4">Entre em Contato</h1>
-        <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec augue nec leo hendrerit volutpat.</p>
+    <div class="container mx-auto mt-8 p-8 bg-white rounded-lg shadow-md flex-grow">
+        <!-- Título -->
+        <h2 class="text-2xl font-bold mb-4 text-center">Entre em Contato:</h2>
 
-        <!-- Formulário de Contato (exemplo básico) -->
-        <form class="mt-8">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="nome">
-                Nome:
-            </label>
-            <input class="border rounded w-full py-2 px-3" id="nome" type="text" placeholder="Digite seu nome">
-
-            <label class="block text-gray-700 text-sm font-bold mt-4 mb-2" for="email">
-                Email:
-            </label>
-            <input class="border rounded w-full py-2 px-3" id="email" type="email" placeholder="Digite seu email">
-
-            <button class="mt-4 bg-blue-500 text-white py-2 px-4 rounded">Enviar Mensagem</button>
-        </form>
+        <!-- Espaço para imagem -->
+        <div class="mb-8">
+            <img src="IMG-01.png" alt="Imagem de Contato" class="w-full rounded-md">
+        </div>
+        <!-- Título "Nossa Localização" -->
+        <h2 class="text-2xl font-bold mb-4 text-center">Nossa Localização:</h2>
+        <!-- Mapa incorporado -->
+        <div class="mb-8">
+            <!-- Substitua a URL do Google Maps no src -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.678901234567!2d-12.3456789!3d23.4567890!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDPCsDM0JzI1LjkiTiAxMsKwMjknNDcuNSJX!5e0!3m2!1sen!2suk!4v1637091114220!5m2!1sen!2suk"
+                width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </div>
 
-    <!-- Rodapé -->
-    <footer class="bg-gray-800 text-white p-4 mt-8">
+    <!-- Rodapé fixo -->
+    <!-- Footer com o h3 "Nossas Mídias Sociais" acima dos ícones das redes sociais -->
+   <footer class="bg-seagull-400 text-white p-4 mt-8 font-sans font-bold">
         <div class="container mx-auto text-center">
-            <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
+            
+            <div class="flex space-x-4">
+                <a href="#" class="text-white">
+                    <i class="fab fa-facebook-square text-2xl"></i>
+                </a>
+                <a href="#" class="text-white">
+                    <i class="fab fa-instagram-square text-2xl"></i>
+                </a>
+                <a href="#" class="text-white">
+                    <i class="fab fa-whatsapp-square text-2xl"></i>
+                </a>
+            </div>
+            <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+            <div class="mt-4">
+                <img src="IMG-02.jpeg" alt="Logomarca" class="w-auto h-16 mx-auto">
+            </div>
         </div>
     </footer>
 
-    <!-- Scripts para a funcionalidade do menu hamburguer -->
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        const menuToggle = document.getElementById('menu-toggle');
-        const menuItems = document.querySelector('.lg\\:flex');
+        $(document).ready(function () {
+            const menuToggle = $('#menu-toggle');
+            const menuItems = $('.lg\\:flex');
 
-        menuToggle.addEventListener('click', () => {
-            menuItems.classList.toggle('hidden');
+            menuToggle.on('click', function () {
+                menuItems.toggleClass('hidden');
+            });
         });
     </script>
-
 </body>
+
 </html>
