Add de Frase no Footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <!-- Links de navegação para dispositivos maiores -->
             <div class="hidden lg:flex space-x-4">
-                <a href="index.html" class="text-white nav-link font-sans font-bold">Home</a>
+                <a href="index.html" class="text-white nav-link font-sans font-bold">Início</a>
                 <a href="sobre.html" class="text-white nav-link font-sans font-bold">Sobre</a>
                 <a href="contato.html" class="text-white nav-link font-sans font-bold">Contato</a>
             </div>
@@ -151,32 +151,30 @@
 
 
 
-    <!-- Rodapé -->
-<!-- Rodapé -->
-<footer class="bg-seagull-400 text-white p-4 mt-8 font-sans font-bold">
-    <div class="container mx-auto text-center">
-        
-        <!-- Adicione os ícones das redes sociais aqui -->
-        <div class="flex space-x-4">
-            <a href="#" class="text-white">
-                <i class="fab fa-facebook-square text-2xl"></i>
-            </a>
-            <a href="#" class="text-white">
-                <i class="fab fa-instagram-square text-2xl"></i>
-            </a>
-            <a href="#" class="text-white">
-                <i class="fab fa-whatsapp-square text-2xl"></i>
-            </a>
-        </div>
 
-        <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
-
-        <!-- Adicione a div para a logomarca -->
-        <div class="mt-4">
-            <img src="IMG-02.jpeg" alt="Logomarca" class="w-auto h-16 mx-auto">
+    <!-- Rodapé fixo -->
+    <footer class="bg-seagull-400 text-white p-4 mt-8 font-sans font-bold">
+        <div class="container mx-auto text-center">
+            
+            <!-- Adicione a classe "text-left" à div para alinhar à esquerda -->
+            <div class="text-left flex space-x-4">
+                <h3 class="text-lg font-bold mb-4">Nossas Mídias Sociais:</h3>
+                <a href="#" class="text-white">
+                    <i class="fab fa-facebook-square text-2xl"></i>
+                </a>
+                <a href="#" class="text-white">
+                    <i class="fab fa-instagram-square text-2xl"></i>
+                </a>
+                <a href="#" class="text-white">
+                    <i class="fab fa-whatsapp-square text-2xl"></i>
+                </a>
+            </div>
+            <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+            <div class="mt-4">
+                <img src="IMG-02.jpeg" alt="Logomarca" class="w-auto h-16 mx-auto">
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 
 
