--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,7 @@
                 </button>
             </div>
             <div class="hidden lg:flex space-x-4">
-                <a href="index.html" class="text-white nav-link font-sans font-bold">Home</a>
+                <a href="index.html" class="text-white nav-link font-sans font-bold">Início</a>
                 <a href="sobre.html" class="text-white nav-link font-sans font-bold">Sobre</a>
                 <a href="contato.html" class="text-white nav-link font-sans font-bold">Contato</a>
             </div>
@@ -58,27 +58,31 @@
     </div>
 
     <!-- Rodapé fixo -->
-    <!-- Footer com o h3 "Nossas Mídias Sociais" acima dos ícones das redes sociais -->
-   <footer class="bg-seagull-400 text-white p-4 mt-8 font-sans font-bold">
-        <div class="container mx-auto text-center">
-            
-            <div class="flex space-x-4">
-                <a href="#" class="text-white">
-                    <i class="fab fa-facebook-square text-2xl"></i>
-                </a>
-                <a href="#" class="text-white">
-                    <i class="fab fa-instagram-square text-2xl"></i>
-                </a>
-                <a href="#" class="text-white">
-                    <i class="fab fa-whatsapp-square text-2xl"></i>
-                </a>
-            </div>
-            <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
-            <div class="mt-4">
-                <img src="IMG-02.jpeg" alt="Logomarca" class="w-auto h-16 mx-auto">
-            </div>
+<footer class="bg-seagull-400 text-white p-4 mt-8 font-sans font-bold">
+    <div class="container mx-auto text-center">
+        
+        <!-- Adicione a classe "text-left" à div para alinhar à esquerda -->
+        <div class="text-left flex space-x-4">
+            <h3 class="text-lg font-bold mb-4">Nossas Mídias Sociais:</h3>
+            <a href="#" class="text-white">
+                <i class="fab fa-facebook-square text-2xl"></i>
+            </a>
+            <a href="#" class="text-white">
+                <i class="fab fa-instagram-square text-2xl"></i>
+            </a>
+            <a href="#" class="text-white">
+                <i class="fab fa-whatsapp-square text-2xl"></i>
+            </a>
         </div>
-    </footer>
+        <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+        <div class="mt-4">
+            <img src="IMG-02.jpeg" alt="Logomarca" class="w-auto h-16 mx-auto">
+        </div>
+    </div>
+</footer>
+
+
+
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
