Fix na index.html

--- a/contato.html
+++ b/contato.html
@@ -14,32 +14,36 @@
 <body class="bg-gray-100 font-sans flex flex-col min-h-screen">
 
     <!-- Navbar -->
-    <nav class="bg-seagull-400 fixed top-0 w-full">
-        <div class="container mx-auto flex justify-between items-center">
-            <!-- Logo -->
-            <div class="text-white font-bold text-lg">
-                <a href="index.html">
-                    <img src="IMG-02.jpeg" alt="" class="w-auto h-20">
-                </a>
-            </div>
-            <!-- Ícone do menu para dispositivos móveis -->
-            <div class="lg:hidden">
-                <button id="menu-toggle" class="text-white focus:outline-none">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16m-7 6h7"></path>
-                    </svg>
-                </button>
-            </div>
-            <!-- Links de navegação para dispositivos maiores -->
-            <div class="hidden lg:flex space-x-4 ">
-                <a href="index.html" class="text-white nav-link font-sans font-bold">Início</a>
-                <a href="sobre.html" class="text-white nav-link font-sans font-bold">Sobre</a>
-                <a href="contato.html" class="text-white nav-link font-sans font-bold">Contato</a>
-            </div>
+    <!-- Navbar -->
+<nav class="bg-seagull-400 fixed top-0 w-full z-20">
+    
+    <div class="container mx-auto flex justify-between items-center px-4">
+        <!-- Logo -->
+        <div class="text-white font-bold text-lg">
+            <a href="index.html">
+                <img src="IMG-02.jpeg" alt="" class="w-auto h-20">
+            </a>
         </div>
-    </nav>
+        <!-- Ícone do menu para dispositivos móveis -->
+        <div class="lg:hidden">
+            <button id="menu-toggle" class="text-white focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M4 6h16M4 12h16m-7 6h7"></path>
+                </svg>
+            </button>
+        </div>
+        <!-- Links de navegação para dispositivos maiores -->
+        <div class="hidden lg:flex space-x-4">
+            <a href="index.html" class="text-white nav-link font-sans font-bold">Início</a>
+            <a href="sobre.html" class="text-white nav-link font-sans font-bold">Sobre</a>
+            <a href="contato.html" class="text-white nav-link font-sans font-bold">Contato</a>
+        </div>
+    </div>
+</nav>
+
+
 
     <!-- Conteúdo principal -->
     <div class="container mx-auto mt-28 p-8 bg-white rounded-lg shadow-md flex-grow">
