--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Link para a biblioteca Waypoints - Contador -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 
-    
+    <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
 
     <title>Meu Site</title>
 </head>
@@ -45,7 +45,7 @@
         <!-- Logo -->
         <div class="text-white font-bold text-lg">
             <a href="index.html">
-                <img src="IMG-02.jpeg" alt="" class="w-auto h-20">
+                <img src="./img/Logomarca.png" alt="" class="w-auto h-20">
             </a>
         </div>
         <!-- Ícone do menu para dispositivos móveis -->
@@ -117,7 +117,7 @@
             </div>
             <div >
                 <h3 class="text-xl font-bold">Marmitas Distribuídas</h3>
-                <p class="text-gray-600">+ de 500</p>
+                <p class="text-gray-600">+ de 600 por dia</p>
             </div>
         </div>
 
@@ -128,7 +128,7 @@
             </div>
             <div>
                 <h3 class="text-xl font-bold">Horas de Colaboração</h3>
-                <p class="text-gray-600">+ de 1000</p>
+                <p class="text-gray-600">+ de 10000</p>
             </div>
         </div>
 
@@ -139,7 +139,7 @@
             </div>
             <div>
                 <h3 class="text-xl font-bold">Pessoas Atendidas</h3>
-                <p class="text-gray-600">+ de 800</p>
+                <p class="text-gray-600">+ de 8000</p>
             </div>
         </div>
     </div>
@@ -152,19 +152,19 @@
         <!-- Card 1 -->
         <div class="bg-gray-300 p-4 rounded-lg shadow-md">
             <h2 class="text-xl font-bold mb-2">Card 1</h2>
-            <img src="https://picsum.photos/400/300/?image=101" alt="Placeholder 1" class="mb-4 rounded-lg">
+            <img src="img/419690171.jpg" alt="Placeholder 1" class="mb-4 rounded-lg">
             <p class="text-gray-700">Conteúdo do Card 1...</p>
         </div>
         <!-- Card 2 -->
         <div class="bg-gray-300 p-4 rounded-lg shadow-md">
             <h2 class="text-xl font-bold mb-2">Card 2</h2>
-            <img src="https://picsum.photos/400/300/?image=102" alt="Placeholder 2" class="mb-4 rounded-lg">
+            <img src="img/370357835.jpg" alt="Placeholder 2" class="mb-4 rounded-lg">
             <p class="text-gray-700">Conteúdo do Card 2...</p>
         </div>
         <!-- Card 3 -->
         <div class="bg-gray-300 p-4 rounded-lg shadow-md">
             <h2 class="text-xl font-bold mb-2">Card 3</h2>
-            <img src="https://picsum.photos/400/300/?image=103" alt="Placeholder 3" class="mb-4 rounded-lg">
+            <img src="img/Captura de Tela (4159).png" alt="Placeholder 3" class="mb-4 rounded-lg">
             <p class="text-gray-700">Conteúdo do Card 3...</p>
         </div>
     </div>
@@ -238,19 +238,20 @@
             <!-- Adicione a classe "text-left" à div para alinhar à esquerda -->
             <div class="text-left flex space-x-4">
                 <h3 class="text-lg font-bold mb-4">Nossas Mídias Sociais:</h3>
-                <a href="#" class="text-white">
+                <a href="https://www.facebook.com/trabalhadores.daultimahora.33" class="text-white">
                     <i class="fab fa-facebook-square text-2xl"></i>
                 </a>
-                <a href="#" class="text-white">
+                <a href="https://www.instagram.com/trabalhadores.daultimahora/" class="text-white">
                     <i class="fab fa-instagram-square text-2xl"></i>
                 </a>
-                <a href="#" class="text-white">
+                <a href="https://wa.me/38992072259" target="_blank" class="text-white">
                     <i class="fab fa-whatsapp-square text-2xl"></i>
                 </a>
+                
             </div>
             <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
             <div class="mt-4">
-                <img src="IMG-02.jpeg" alt="Logomarca" class="w-auto h-16 mx-auto">
+                <img src="./img/Logomarca.png" alt="Logomarca" class="w-auto h-16 mx-auto">
             </div>
         </div>
     </footer>
