--- a/contato.html
+++ b/contato.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="tailwind.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
     <title>Contato</title>
 </head>
 
 <body class="bg-gray-100 font-sans flex flex-col min-h-screen">
 
-    <!-- Navbar -->
+   
     <!-- Navbar -->
 <nav class="bg-seagull-400 fixed top-0 w-full z-20">
     
@@ -21,7 +22,7 @@
         <!-- Logo -->
         <div class="text-white font-bold text-lg">
             <a href="index.html">
-                <img src="IMG-02.jpeg" alt="" class="w-auto h-20">
+                <img src="./img/Logomarca.png" alt="" class="w-auto h-20">
             </a>
         </div>
         <!-- Ícone do menu para dispositivos móveis -->
@@ -59,7 +60,7 @@
         <!-- Mapa incorporado -->
         <div class="mb-8">
             <!-- Substitua a URL do Google Maps no src -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.678901234567!2d-12.3456789!3d23.4567890!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDPCsDM0JzI1LjkiTiAxMsKwMjknNDcuNSJX!5e0!3m2!1sen!2suk!4v1637091114220!5m2!1sen!2suk"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3821.4077580150624!2d-43.85460452406026!3d-16.70649434607694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x754ab41ec857779%3A0xa51e24e4fc960d32!2sR.%20Jo%C3%A3o%20Figueiredo%2C%20318%20-%20Vila%20Exposicao%2C%20Montes%20Claros%20-%20MG%2C%2039400-286!5e0!3m2!1spt-BR!2sbr!4v1706137389506!5m2!1spt-BR!2sbr"
                 width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
@@ -71,19 +72,20 @@
         <!-- Adicione a classe "text-left" à div para alinhar à esquerda -->
         <div class="text-left flex space-x-4">
             <h3 class="text-lg font-bold mb-4">Nossas Mídias Sociais:</h3>
-            <a href="#" class="text-white">
+            <a href="https://www.facebook.com/trabalhadores.daultimahora.33" class="text-white">
                 <i class="fab fa-facebook-square text-2xl"></i>
             </a>
-            <a href="#" class="text-white">
+            <a href="https://www.instagram.com/trabalhadores.daultimahora/" class="text-white">
                 <i class="fab fa-instagram-square text-2xl"></i>
             </a>
-            <a href="#" class="text-white">
+            <a href="https://wa.me/38992072259" target="_blank" class="text-white">
                 <i class="fab fa-whatsapp-square text-2xl"></i>
             </a>
+            
         </div>
         <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
         <div class="mt-4">
-            <img src="IMG-02.jpeg" alt="Logomarca" class="w-auto h-16 mx-auto">
+            <img src="./img/Logomarca.png" alt="Logomarca" class="w-auto h-16 mx-auto">
         </div>
     </div>
 </footer>
