Add IMG de Cards

--- a/contato.html
+++ b/contato.html
@@ -49,11 +49,11 @@
     <!-- Conteúdo principal -->
     <div class="container mx-auto mt-28 p-8 bg-white rounded-lg shadow-md flex-grow">
         <!-- Título -->
-        <h2 class="text-2xl font-bold mb-4 text-center">Entre em Contato:</h2>
+        <h2 class="text-2xl font-bold mb-4 text-center"></h2>
 
         <!-- Espaço para imagem -->
         <div class="mb-8">
-            <img src="IMG-01.png" alt="Imagem de Contato" class="w-full rounded-md">
+            <img src="./img/Contato.png" alt="Imagem de Contato" class="w-full rounded-md">
         </div>
         <!-- Título "Nossa Localização" -->
         <h2 class="text-2xl font-bold mb-4 text-center">Nossa Localização:</h2>
@@ -83,7 +83,8 @@
             </a>
             
         </div>
-        <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Instituição de Caridade Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+        <p>CNPJ: 53.140.991/0001-74</p>
         <div class="mt-4">
             <img src="./img/Logomarca.png" alt="Logomarca" class="w-auto h-16 mx-auto">
         </div>
