--- a/sobre.html
+++ b/sobre.html
@@ -106,18 +106,21 @@
             </a>
             <!-- Adicione seus vídeos aqui -->
             <a data-fancybox="gallery" href="https://www.youtube.com/embed/iQ1wkipeSTA" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
-                <img src="img/272363306.jpg" alt="Vídeo 1" class="w-full h-auto rounded-md">
+                <img src="img/IMG-10.png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+               
             </a>
 
-            <a data-fancybox="gallery" href="https://www.youtube.com/embed/zEbySDbStPs?si=RwDD0IN9PeaZgQr_" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
+            <a data-fancybox="gallery" href="https://www.youtube.com/embed/QsAejOgjyvc" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
                 <img src="img/Captura de Tela (4191).png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+                <p>Saiba mais, clique aqui!</p>
             </a>
             
             <a data-fancybox="gallery" href="https://www.youtube.com/embed/Amv7P_r3h3g" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
                 <img src="img/Captura de Tela (4195).png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+                <p>Saiba mais, clique aqui!</p>
             </a>
             <a data-fancybox="gallery" href="https://www.youtube.com/embed/PiM4N_dIiQA" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
-                <img src="img/Captura de Tela (4160).png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+                <img src="img/IMG-11.png" alt="Vídeo 1" class="w-full h-auto rounded-md">
             </a>
             <!-- Adicione suas imagens aqui -->
             <a data-fancybox="gallery" href="img/193589826.jpg" class="w-full h-auto rounded-md cursor-pointer fancybox">
@@ -133,18 +136,22 @@
                 <img src="./img/272331663.jpg" alt="Imagem 4" class="w-full h-auto rounded-md">
             </a>
             <!-- Adicione seus vídeos aqui -->
-            <a data-fancybox="gallery" href="https://www.youtube.com/embed/your-video-id" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
-                <img src="IMG-01.png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+            <a data-fancybox="gallery" href="https://www.youtube.com/embed/PCh4N_hqmyc" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
+                <img src="./img/272678686.jpg" alt="Vídeo 1" class="w-full h-auto rounded-md">
+                <p>Saiba mais, clique aqui!</p>
             </a>
 
-            <a data-fancybox="gallery" href="https://www.youtube.com/embed/your-video-id" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
-                <img src="IMG-01.png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+            <a data-fancybox="gallery" href="https://www.youtube.com/embed/WpKxSZUVwOU" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
+                <img src="./img/419252215.jpg" alt="Vídeo 1" class="w-full h-auto rounded-md">
+                <p>Saiba mais, clique aqui!</p>
             </a>
-            <a data-fancybox="gallery" href="https://www.youtube.com/embed/your-video-id" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
-                <img src="IMG-01.png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+            <a data-fancybox="gallery" href="https://www.youtube.com/embed/0_9HdiURZCs" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
+                <img src="./img/Captura de Tela (4150).png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+                <p>Saiba mais, clique aqui!</p>
             </a>
-            <a data-fancybox="gallery" href="https://www.youtube.com/embed/your-video-id" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
-                <img src="IMG-01.png" alt="Vídeo 1" class="w-full h-auto rounded-md">
+            <a data-fancybox="gallery" href="https://www.youtube.com/embed/c7yNjAlvXgQ" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
+                <img src="./img/273144707.jpg" alt="Vídeo 1" class="w-full h-auto rounded-md">
+                <p>Saiba mais, clique aqui!</p>
             </a>
             <!--  -->
              <!-- Adicione suas imagens aqui -->
@@ -162,7 +169,7 @@
             </a>
 
              <!-- Adicione seus vídeos aqui -->
-             <a data-fancybox="gallery" href="https://www.youtube.com/embed/your-video-id" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
+             <!-- <a data-fancybox="gallery" href="https://www.youtube.com/embed/your-video-id" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
                 <img src="IMG-01.png" alt="Vídeo 1" class="w-full h-auto rounded-md">
             </a>
 
@@ -174,7 +181,7 @@
             </a>
             <a data-fancybox="gallery" href="https://www.youtube.com/embed/your-video-id" data-type="iframe" class="w-full h-auto rounded-md cursor-pointer fancybox">
                 <img src="IMG-01.png" alt="Vídeo 1" class="w-full h-auto rounded-md">
-            </a>
+            </a> -->
             <!-- Adicione mais imagens e vídeos conforme necessário -->
         </div>
     </div>
@@ -198,7 +205,8 @@
                     <i class="fab fa-whatsapp-square text-2xl"></i>
                 </a>
             </div>
-            <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Instituição de Caridade Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+            <p>CNPJ: 53.140.991/0001-74</p>
             <div class="mt-4">
                 <img src="./img/Logomarca.png" alt="Logomarca" class="w-auto h-16 mx-auto">
             </div>
