--- a/index.html
+++ b/index.html
@@ -133,35 +133,35 @@
 <section class="container mx-auto mt-8 ">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4">
         <!-- Contador de Marmitas Distribuídas -->
-        <div class="bg-gray-300 p-4 rounded-lg shadow-md flex items-center">
+        <div class="p-4 rounded-lg shadow-md flex items-center" style="background-color: #F4b821;">
             <div class="mr-4 ">
                 <i class="fas fa-utensils text-3xl text-gray-500"></i>
             </div>
             <div >
                 <h3 class="text-xl font-bold">Marmitas Distribuídas</h3>
-                <p class="text-gray-600">+ de 600 por dia</p>
+                <p class="text-gray-600"><b>+ de 600 por dia</b></p>
             </div>
         </div>
 
         <!-- Contador de Horas de Colaboração -->
-        <div class="bg-gray-300 p-4 rounded-lg shadow-md flex items-center">
+        <div class="bg-gray-300 p-4 rounded-lg shadow-md flex items-center" style="background-color: #F4b821;">
             <div class="mr-4">
                 <i class="far fa-clock text-3xl text-gray-500"></i>
             </div>
-            <div>
+            <div >
                 <h3 class="text-xl font-bold">Horas de Colaboração</h3>
-                <p class="text-gray-600">+ de 10000</p>
+                <p class="text-gray-600"><b>+ de 10000</b></p>
             </div>
         </div>
 
         <!-- Contador de Pessoas Atendidas -->
-        <div class="bg-gray-300 p-4 rounded-lg shadow-md flex items-center">
+        <div class=" p-4 rounded-lg shadow-md flex items-center bg-gray-300" style="background-color: #F4b821;">
             <div class="mr-4">
                 <i class="fas fa-users text-3xl text-gray-500"></i>
             </div>
             <div>
                 <h3 class="text-xl font-bold">Pessoas Atendidas</h3>
-                <p class="text-gray-600">+ de 8000</p>
+                <p class="text-gray-600"><b>+ de 8000</b></p>
             </div>
         </div>
     </div>
@@ -173,26 +173,26 @@
     <div class="container mx-auto mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Card 1 -->
         <div class="bg-gray-300 p-4 rounded-lg shadow-md">
-            <h2 class="text-xl font-bold mb-2">Colabore</h2>
-            <img src="img/419690171.jpg" alt="Placeholder 1" class="mb-4 rounded-lg">
-            <p class="text-gray-700">Conteúdo do Card 1...</p>
+            <h2 class="text-xl font-bold mb-2">Endereço</h2>
+            <img src="img/3.png" alt="Placeholder 1" class="mb-4 rounded-lg">
+            <p class="text-gray-700"></p>
         </div>
         <!-- Card 2 -->
         <div class="bg-gray-300 p-4 rounded-lg shadow-md">
             <h2 class="text-xl font-bold mb-2">Kombi</h2>
-            <img src="img/370357835.jpg" alt="Placeholder 2" class="mb-4 rounded-lg">
-            <p class="text-gray-700">Conteúdo do Card 2...</p>
+            <img src="img/Cartaz-2.png" alt="Placeholder 2" class="mb-4 rounded-lg">
+            <p class="text-gray-700"></p>
         </div>
         <!-- Card 3 -->
         <div class="bg-gray-300 p-4 rounded-lg shadow-md">
-            <h2 class="text-xl font-bold mb-2">Instituição</h2>
-            <img src="img/Captura de Tela (4159).png" alt="Placeholder 3" class="mb-4 rounded-lg">
-            <p class="text-gray-700">Conteúdo do Card 3...</p>
+            <h2 class="text-xl font-bold mb-2">Doação</h2>
+            <img src="img/2.png" alt="Placeholder 3" class="mb-4 rounded-lg">
+            <p class="text-gray-700"></p>
         </div>
     </div>
 <!-- Div principal com fundo azul, texto à esquerda e botão à direita -->
-<div class="blue-container container mx-auto mt-8 bg-gray-300">
-    <div class="left-text-blue">
+<div class="blue-container container mx-auto mt-8" style="background-color: #f4b821;">
+    <div class="left-text-blue" >
         <p class="text-doacao">Faça uma doação. Ajude a manter este projeto de amparo!</p>
         </div>
     <button class="right-button-blue bg-button"><a href="contato.html">Quero Doar!</a></button>
@@ -238,10 +238,11 @@
 
  
      <!-- Div principal com fundo laranja, texto à esquerda e botão à direita -->
-     <div class="orange-container container mx-auto mt-8">
-        <div class="left-text">
+     <div class="orange-container container mx-auto mt-8" style="background-color: #f4b821;">
+        <div class="left-text" >
             Seja um voluntário e venha fazer a diferença na vida de muitos!
             </div>
+            <p></p>
         <button class="right-button"><a href="contato.html">Entre em Contato!</a></button>
     </div>
 
@@ -271,7 +272,8 @@
                 </a>
                 
             </div>
-            <p>&copy; 2024 Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Instituição de Caridade Trabalhadores da Última Hora. Todos os direitos reservados.</p>
+            <p>CNPJ: 53.140.991/0001-74</p>
             <div class="mt-4">
                 <img src="./img/Logomarca.png" alt="Logomarca" class="w-auto h-16 mx-auto">
             </div>
